# BreadLua

./: .gitignore  BreadLua.slnx  README.md  build.ps1  build.sh  pack-unity.ps1  pack.ps1
.github/workflows/: activation.yml  ci.yml
benchmarks/BreadLua.Benchmarks/: BindOptimizationBenchmark.cs  BreadLua.Benchmarks.csproj  DataAccessBenchmark.cs  LuaLogicBenchmark.cs  Program.cs
docs/: api-reference.md  building.md  source-generator.md  unity-setup.md
docs/plans/: 2026-03-24-plan1-core-and-bridge.md  2026-03-24-plan2-module-and-bind.md  2026-03-24-plan3-tinker-repl-unity.md
docs/specs/: 2026-03-24-breadlua-design.md
docs/superpowers/plans/: 2026-03-25-unity-runtime-test-ci.md
docs/superpowers/specs/: 2026-03-25-unity-runtime-test-ci-design.md
samples/BreadLua.Sample/: BreadLua.Sample.csproj  Program.cs
samples/BreadLua.Sample/scripts/: test.lua
src/BreadLua.Generator/: BreadLua.Generator.csproj  BreadLuaGenerator.cs
src/BreadLua.Generator/Bind/: BindAnalyzer.cs  BindCEmitter.cs  BindCSharpEmitter.cs  BindLuaEmitter.cs
src/BreadLua.Generator/Bridge/: BridgeAnalyzer.cs  BridgeCEmitter.cs  BridgeCSharpEmitter.cs  BridgeLuaEmitter.cs
src/BreadLua.Generator/Module/: ModuleAnalyzer.cs  ModuleCEmitter.cs  ModuleCSharpEmitter.cs
src/BreadLua.Generator/Util/: NamingHelper.cs  TypeMapper.cs
src/BreadLua.Native/: CMakeLists.txt
src/BreadLua.Native/src/: android_compat.h  breadlua_core.c  breadlua_object.c
src/BreadLua.Runtime/: BreadLua.Runtime.csproj  BreadPack.NativeLua.targets
src/BreadLua.Runtime/Attributes/: LuaBindAttribute.cs  LuaBridgeAttribute.cs  LuaConstructorAttribute.cs  LuaExportAttribute.cs  LuaFieldAttribute.cs  LuaIgnoreAttribute.cs  LuaModuleAttribute.cs  LuaReadOnlyAttribute.cs
src/BreadLua.Runtime/Core/: AotAttribute.cs  Buffer.cs  HotReload.cs  LuaConfig.cs  LuaException.cs  LuaState.cs  LuaTinker.cs  ObjectHandle.cs  Repl.cs
src/BreadLua.Runtime/Native/: LuaConstants.cs  LuaNative.cs
src/BreadLua.Unity/: README.md  package.json
src/BreadLua.Unity/Runtime/: AssemblyInfo.cs  BreadPack.NativeLua.Unity.asmdef  UnityLuaState.cs  UnityModuleLoader.cs  link.xml
src/BreadLua.Unity/Tests/: BreadPack.NativeLua.Unity.Tests.asmdef  BufferEdgeCaseTests.cs  BufferTests.cs  GeneratorTests.cs  HotReloadTests.cs  IL2CPPEdgeCaseTests.cs  LuaStateEdgeCaseTests.cs  LuaStateTests.cs  NativeLibraryDiagnosticTests.cs  ObjectHandleEdgeCaseTests.cs  TinkerEdgeCaseTests.cs  TinkerTests.cs  UnityIntegrationTests.cs
tests/BreadLua.Tests/: BreadLua.Tests.csproj
tests/BreadLua.Tests/Bind/: BindSnapshotTests.cs  BindTests.cs
(+20 files in other folders)
